test/features/errors/semantic/e1046_private_field.spl
# E1046: Private Field

Feature: E1046 - Field is Private
  As a Simple compiler
  I want to detect access to private fields
  So that field privacy is maintained

  Background:
    Given I have the Simple compiler

  Scenario: Accessing private field
    When I compile:
      '''
      struct Point:
        private_x: i32  # Private

      fn test():
        val p = Point { private_x: 0 }
        print(p.private_x)  # Error if accessed from outside
      '''
    Then I should see error E1046 at line 6
    And the error message should be "field `{field}` is private"
    And the label should indicate "private field"
    And the help should suggest "access the field through a public method or make it public"

  Scenario: Valid public field access
    When I compile:
      '''
      struct Point:
        pub x: i32

      fn test():
        val p = Point { x: 0 }
        print(p.x)  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Data:
        private_field: i32

      fn test():
        val d = Data { private_field: 0 }
        print(d.private_field)
      '''
    Then I should see error E1046
    And the error message should contain "비공개 필드"
